Fix broken page 108 and 109

--- a/dos33.html
+++ b/dos33.html
@@ -6718,7 +6718,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     114 *         TIMES $10.     *
                     115 *                        *
                     116 *  A-REG HOLDS DESIRED   *
-<hr>                    117 *         HALFTRACK,     *                                  ; === Page <a class='page' name='page110'>110</a> ===
+<hr>                    117 *         HALFTRACK,     *                                  ; === Page <a class='page' name='page108'>108</a> ===
                     118 *         (SINGLE PHASE) *
                     119 *                        *
                     120 *  CURTRK HOLDS CURRENT  *
@@ -6781,7 +6781,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 39D4:B9 11 3A       177 <!--                           -->            LDA <a class="v" href="#ONTABLE"  >ONTABLE</a>,Y   FOR 'ONTIME'.
 39D7:20 00 3A       178 <!--                           -->            JSR <a class="x" href="#MSWAIT"   >MSWAIT</a>      (100 USEC INTERVALS)
                     179 <!--                           -->*
-<hr>39DA:A5 27          180             LDA <a class="v" href="#PRIOR"    >PRIOR</a>
+<hr>39DA:A5 27          180             LDA <a class="v" href="#PRIOR"    >PRIOR</a>                                       ; === Page <a class='page' name='page109'>109</a> ===
 39DC:18             181             CLC             ;CARRY CLEAR=PHASE OFF
 39DD:20 F1 39       182             JSR <a class="x" href="#CLRPHASE">CLRPHASE</a>    ;PHASE OFF
 39E0:BD 1D 3A       <a class='line' name='RDADSEEK.183'>183</a>             LDA <a class="v" href="#OFFTABLE">OFFTABLE</a>,Y  THEN WAIT 'OFFTIME'.
