MONOTONICALLY INCREASING ORDER

--- a/dos33.html
+++ b/dos33.html
@@ -8019,8 +8019,8 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     190 * LOGICAL (REQUESTED) SECTOR NUMBER
                     191 * TO PHYSICAL SECTOR NUMBER. THE
                     192 * DISKETTE IS FORMATTED WITH ALL
-                    193 * SECTORS IN MONOTONICALLY INCREASING
-                    194 * ORDER. THE TRANSLATION WILL ALLOW
+                    193 * SECTORS IN MONOTONICALLY INCREASING                       ; <i>MONOTONICALLY INCREASING ORDER</i>
+                    194 * ORDER. THE TRANSLATION WILL ALLOW                         ; Yup, math classes were just as boring back then too.
                     195 * TIME BETWEEN SECTORS FOR READS.
                     196 *
                     197             REP 40
